charts/all/config-demo/templates/config-demo-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    application: config-demo
  name: config-demo
spec:
  replicas: 2
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      deploymentconfig: config-demo
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: config-demo
        deploymentconfig: config-demo
      name: config-demo
    spec:
      securityContext:
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: apache
        image: registry.access.redhat.com/ubi10/httpd-24:10.0-1755779646
        #imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        volumeMounts:
        - mountPath: /var/www/html
          name: config-demo-configmap
        - mountPath: /var/www/html/secret
          readOnly: true
          name: config-demo-secret
        - mountPath: /tmp
          name: tmp-volume
        - mountPath: /var/cache/httpd
          name: cache-volume
        - mountPath: /var/run/httpd
          name: run-volume
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 256Mi
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          capabilities:
            drop:
            - ALL
          seccompProfile:
            type: RuntimeDefault
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        livenessProbe:
          httpGet:
            path: /index.html
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /index.html
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 5
          timeoutSeconds: 1
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
      volumes:
      - name: config-demo-configmap
        configMap:
          defaultMode: 438
          name: config-demo-configmap
      - name: config-demo-secret
        secret:
          secretName: config-demo-secret
      - name: tmp-volume
        emptyDir: {}
      - name: cache-volume
        emptyDir: {}
      - name: run-volume
        emptyDir: {}
