charts/all/config-demo/templates/config-demo-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: config-demo
  name: config-demo
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: config-demo
    weight: 100
  wildcardPolicy: None
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
